Issue #22615: Argument Clinic now supports the "type" argument for the int converter.  This permits using the int converter with enums and typedefs.